# gogol-mogol-bot-

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  setup-server.sh
.github/workflows/: deploy.yml
alembic/: env.py
app/: config.py  database.py  init_db.py  main.py  models.py
app/handlers/: common.py  cook.py  manager.py  owner.py  sous_chef.py  states.py
app/keyboards/: inline.py  menus.py
app/middlewares/: auth.py
app/services/: calc.py  cook_service.py  pdf_report.py  reports.py
tests/: test_calc.py
